public/angular/sass/shared/navbar.scss
/* Adding all this context so we override the default bootstrap -15 left margin */
.navbar-brand {
  margin-top: 5px;
  margin-right: 20px;
  background-image: url(../images/logo-v1.png);
  background-repeat: no-repeat;
  width: 104px;
  height: 28px;
}

.navbar {
  font-size: 14px;
}

.bg-default {
  background-color: $navbar-green;
  .navbar-nav > li {
    > a:hover,
    > a:focus,
    &.active > a,
    &.active > a:hover,
    &.active > a:focus {
      background-color: darken($navbar-green, 10%);
    }
  }
}

.navbar-stats {
  min-height: 34px;
  background-color: $navbar-yellow;
  .navbar-text {
    line-height: 26px;
  }
  .container {
    height: 44px;
    position: relative;
    padding-top: 8px;
  }
  .navbar-nav > li {
    > a:hover,
    > a:focus,
    &.active > a,
    &.active > a:hover,
    &.active > a:focus {
      background-color: darken($navbar-yellow, 10%);
    }
  }
}

.navbar-text {
  line-height: 1;
  margin: 0;
  font-weight: $medium-weight;

  .nav-bar-number {
    font-size: 18px;
  }
  .nav-bar-label {
    font-size: 12px;
    margin-right: 10px;
  }
}

li.user {
  font-weight: bold;
}

.source-errors {
  float: right;
  padding-top: 5px;
  a {
    color: #333;
  }
}

